[project]
name = "ps"
version = "0.1.0"
description = "problem solving with programming"
requires-python = ">=3.14"
dependencies = [
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "cryptography==44.0.1",
    "dependency-injector==4.48.1",
    "h11==0.16.0",
    "idna==3.10",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "outcome==1.3.0.post0",
    "pycparser==2.22",
    "pygments==2.19.2",
    "pysocks==1.7.1",
    "pyyaml==5.3.1",
    "requests==2.32.4",
    "rich==13.9.4",
    "selenium==4.34.2",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "websockets==10.4",
    "wsproto==1.2.0",
]